manifest file/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: reddit-clone
spec:
  containers:
  - name: reddit-clone
    image: shubhankargupta/reddit-clone-app:latest
    ports:
    - containerPort: 3000
